feat : finishing api authentication
